@@ -49,11 +49,11 @@ div#main {
 	/* Set rules to fill background */
 	min-height: 100%;
 	min-width: 1024px;
-
+	
 	/* Set up proportionate scaling */
 	width: 100%;
 	height: auto;
-
+	
 	/* Set up positioning */
 	position: fixed;
 	top: 0;
@@ -62,7 +62,7 @@ div#main {
 }
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
-	#login_body  {
+	#login_body {
 		left: 50%;
 		margin-left: -512px;   /* 50% */
 	}
@@ -157,7 +157,7 @@ p.center {
 h1#log {
 	font-size: 18px;
 	margin-bottom: 0px;
-	color: #000;	
+	color: #000;
 }
 h1#log_f {
 	color: #c00;
@@ -1426,9 +1426,15 @@ tfoot.scwFoot {
 
 /* Cells divs to set individual styles with the table objects */
 div.cellBold {
-	width:100%; 
-	height:100%; 
+	width: 100%; 
+	height: 100%; 
 	font-weight: bold;
+}
+
+div.cellRight {
+	width: 100%; 
+	height: 100%; 
+	text-align: right; 
 }
 
 div.cellCenter {
@@ -1438,63 +1444,63 @@ div.cellCenter {
 }
 
 div.cellWhite {
-	width:100%; 
-	height:100%;
+	width: 100%; 
+	height: 100%;
 	background: #fff;
 	color: #000;
 }
 
 div.cellNormal {
-	width:100%; 
-	height:100%;
+	width: 100%; 
+	height: 100%;
 	background: #008e00;
 	color: #fff;
 }
 
 div.cellCritical {
-	width:100%; 
-	height:100%;
+	width: 100%; 
+	height: 100%;
 	background: #cc0000;
 	color: #fff;
 }
 
 div.cellWarning {
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
 	background: #fce94f;
 	color: #000;
 }
 
 div.cellUnknown {
-	width:100%; 
-	height:100%;
+	width: 100%; 
+	height: 100%;
 	background: #babdb6;
 	color: #000;
 }
 
 div.cellNotInit {
-	width:100%; 
-	height:100%;
+	width: 100%; 
+	height: 100%;
 	background: #729fcf;
 	color: #000;
 }
 
 div.cellAlert {
-	width:100%; 
-	height:100%;
+	width: 100%; 
+	height: 100%;
 	background: #ffa300;
 	color: #000;
 }
 
 div.cellBorder1 {
-	width:100%; 
-	height:100%;
+	width: 100%; 
+	height: 100%;
 	border: 1px solid black;
 }
 
 div.cellBig {
-	width:100%; 
-	height:100%;
+	width: 100%; 
+	height: 100%;
 	font-size: 18px;
 }
 
